@@ -1,4 +1,6 @@
 * other features (easy)
+** improve predict for Heskes: maybe possible to do it entirely with a matrix
+operation
 ** calculateProtoDist: use other type of neighbors (but add a parameter for the
 radius because it should not affect the poly.dist plot)
 ** superclusters : make projGraph and output super-clusters for observations
